# ai_investment_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/routes/: __init__.py  agent.py  filings.py  graph.py  health.py  news.py  reports.py  research.py  stocks.py
app/cache/: __init__.py  json.py  json_cache.py  redis_client.py
app/core/: config.py
app/db/: __init__.py  models.py  repo.py  repositories.py  session.py
app/schemas/: agent.py  filings.py  news.py  reports.py  research.py  stocks.py  workflow.py
app/services/: agent.py  deepseek_agent_service.py  formatter.py  langgraph_research_workflow.py  openai_agent_service.py  report_formatter.py  research.py  research_service.py  workflow.py
app/tools/: __init__.py  filings.py  news.py  news_analysis.py  stock_data.py  stocks.py
app/web/: __init__.py  index.html
app/web/static/: app.js  styles.css
data/filings/: AAPL.txt  NVDA.txt
docs/: resume.md
tests/: test_agent.py  test_dependency_health.py  test_filing_rag.py  test_graph_workflow.py  test_health.py  test_json_cache.py  test_news.py  test_report_formatter.py  test_report_routes.py  test_reports.py  test_research.py  test_stocks.py  test_tool_cache.py  test_web_ui.py
